# cppstringx

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
doc/: CMakeLists.txt
include/cppstringx/: cppstringx.hpp
sample/: main.cpp
test/api/: CMakeLists.txt  test_api.cpp  test_contains.cpp  test_copy.cpp  test_ends_with.cpp  test_equals.cpp  test_join.cpp  test_range.cpp  test_replace.cpp  test_split.cpp  test_split_token.cpp  test_starts_with.cpp  test_string_length.cpp  test_to_lower.cpp  test_to_upper.cpp  test_trim.cpp  test_trim_end.cpp  test_trim_start.cpp
test/utility/: CMakeLists.txt  test_utility.cpp
